login button text align fixed (#863)

--- a/src/views/pages/profiles/LoginPage.less
+++ b/src/views/pages/profiles/LoginPage.less
@@ -232,7 +232,6 @@
         border-radius: 0.04rem;
         border: none;
         color: @white;
-        padding: 0.08rem 0;
         text-align: center;
         font-size: 0.28rem;
         word-spacing: 0.2rem;
